authentication checks before loading page

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Collaborate with just a url"
     />
+    <meta
+      name="keywords"
+      content="Collaborate,Editor,React,HTML,CSS,JavaScript">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
